--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h2> This is Alex Yau.</h2>
         <H3> I wishing you and your family all the best in your new Reno HOME.</H3>
         <h3> Sorry, I cannot join you housewarming party as I not around Penang.</h3>
-            <h3>You can click on the link for your  <a href="./public/YinChuan.html">special gift</a> </h3>
+            <h3>You can click on the link for your  <a href="./public/YinChuan.html">special gift!</a> </h3>
      <hr />  
      <br />
      
